--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -115,6 +115,7 @@
     padding-top: 140px;
     padding-bottom: 100px;
     text-align: center;
+    height: auto;
 }
 
 .bc-bg .main-slider-one__shape-six {
