--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -202,6 +202,11 @@
   .contactImg-right svg{
     transform: scale(1.3) translateX(50px);
   }
+
+  /* chat custom css  */
+  #BotPenguin-messenger #ele-304{
+    opacity: 0;
+  }
   @media (max-width: 767px) {
     .for-header.main-slider-one__item{
         height: 80px;
