--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -27,17 +27,17 @@
 }
 .main-header__logo a{
     display: flex;
-    align-items: center;
+    align-items: end;
 }
 .logo-text{
-    margin-left: 10px;
+    margin-left: 2px;
 }
 
 .logo-text h1{
     color: #fff;
     font-size: 26px;
-    line-height: 26px;
-    margin-bottom: 5px;
+    line-height: normal;
+    margin-bottom: 0;
 }
 .logo-text p{
     color: #fff;
@@ -210,6 +210,42 @@
     color: #fff;
   }
 
+
+  /* loader css */
+  #mpl-logo-m {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    -webkit-filter: url("#goo");
+    filter: url("#goo");
+    opacity: 0;
+    transition: opacity .5s;
+  }
+
+  #mpl-logo-m ul {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+  }
+
+  #mpl-logo-m ul li {
+    width: 18px;
+    height: 18px; 
+    border-radius: 100%;
+    background: #019BF0;
+    position: absolute;
+    transition: all 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    left: 0;
+    top: 0;
+    transform: scale(1);
+  }
+
+  #loader-content:empty+#mpl-logo-m {
+    opacity: 1;
+  }
+ /* end of loader css */
   /* chat custom css  */
   #BotPenguin-messenger #ele-304{
     opacity: 0;
